修复GitHub Pages链接问题 - 添加英文重定向页面

--- a/随机森林预测电商数据/index.html
+++ b/随机森林预测电商数据/index.html
@@ -161,13 +161,17 @@
             <div class="card">
                 <h3>📊 投资人专业报告</h3>
                 <p>查看完整的投资分析报告，包含市场机会、技术架构、财务预测和风险评估。采用莫兰迪紫色系高端设计，支持PDF下载。</p>
-                <a href="./reports/investor_report/投资人专业报告.html" class="btn">查看报告</a>
+                <a href="./investor-report.html" class="btn">查看报告</a>
+                <br><br>
+                <a href="./reports/investor_report/投资人专业报告.html" class="btn" style="background: linear-gradient(135deg, #9f7aea 0%, #805ad5 100%);">直接访问</a>
             </div>
 
             <div class="card">
                 <h3>📈 交互式数据仪表板</h3>
                 <p>实时数据可视化仪表板，展示销售趋势、用户行为分析、产品表现等关键业务指标。</p>
-                <a href="./charts/交互式仪表板.html" class="btn">打开仪表板</a>
+                <a href="./dashboard.html" class="btn">打开仪表板</a>
+                <br><br>
+                <a href="./charts/交互式仪表板.html" class="btn" style="background: linear-gradient(135deg, #9f7aea 0%, #805ad5 100%);">直接访问</a>
             </div>
 
             <div class="card">
